Fixed header on mobile

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,8 +4,9 @@
 }
 
 main {
-  min-height: calc(100vh - 60px);
+  min-height: calc(100vh - var(--header-height));
   background-color: var(--color-background);
+  padding-top: var(--header-height);
 }
 
 /* Desktop layout - adjust main content for sidebar */
@@ -13,6 +14,7 @@ main {
   main {
     margin-left: 250px;
     min-height: 100vh;
+    padding-top: 0;
   }
 }
 
@@ -20,6 +22,7 @@ main {
 @media (orientation: landscape) and (max-width: 767px) {
   main {
     min-height: calc(100vh - 50px);
+    padding-top: 50px;
   }
 }
 
